# gat

./: .gitignore  CHANGELOG.md  CODE_REVIEW_ISSUES.md  COMPLETION_SUMMARY.md  Cargo.toml  FEATURE_RESEARCH.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRIORITY_FEATURES_IMPLEMENTED.md  README.md  RELEASE_NOTES_v0.2.0.md
.github/workflows/: ci.yml
docs/: COMMANDS.md
docs/man/man1/: gat-archive.1  gat-config.1  gat-describe.1  gat-doctor.1  gat-dx.1  gat-go.1  gat-list.1  gat-merge.1  gat-new.1  gat-path.1  gat-prune.1  gat-rm.1  gat-search.1  gat-sessions.1  gat-shell-init.1  gat-switch.1  gat-tmux.1  gat-ui.1  gat-watch.1  gat.1
docs/wiki/: Home.md  Tmux-Layout.md
src/: app.rs  cli.rs  config.rs  docker.rs  error.rs  git.rs  main.rs  metadata.rs  output.rs  tui.rs
tests/: worktree_cli.rs
