[package]
name = "gat"
version = "0.3.0"
edition = "2021"
description = "Ticket-oriented Git worktree workflow helper"
license = "UNLICENSED"
publish = false

[[bin]]
name = "gat"
path = "src/main.rs"

[dependencies]
serde_yaml = "=0.9.27"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.132"
env_logger = "0.10"
log = "0.4"
ctrlc = "3.4"
indexmap = "=2.11.1"
ratatui = { version = "=0.28.1", optional = true }
crossterm = { version = "=0.28.1", optional = true }

[features]
# The interactive `gat ui` dashboard. Off by default so the standard build
# stays lean and dependency-light; enable with `cargo build --features tui`.
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[dev-dependencies]
tempfile = "=3.8.1"
